[workspace]
resolver = "2"
members = [
    "crates/talon-types",
    "crates/talon-data",
    "crates/talon-db",
    "crates/talon-broker",
    "crates/talon-risk",
    "crates/talon-exec",
    "crates/talon-grad",
    "crates/talon-regime",
    "crates/talon-util",
    "crates/talon-triminl",
    "crates/talon-firebird",
    "crates/talon-thunderbird",
    "crates/talon-taxi",
    "crates/talon-climb",
    "crates/talon-sage",
    "crates/talon-parashort",
    "crates/talon-siphon",
    "crates/talon-snapback",
    "crates/talon-carousel",
    "crates/talon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Exact decimal arithmetic -- NEVER use f64 for money
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Database (orders, journal, graduation)
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Market data storage
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow"] }
csv = "1"

# Lock-free state sharing
arc-swap = "1"

# Async trait support
async-trait = "0.1"

# Concurrent maps (quote cache)
dashmap = "6"

# Terminal
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Statistics
statrs = "0.18"
hdrhistogram = "7"

# ECS (justified at 8 concurrent strategy entities)
bevy_ecs = "0.15"

# HTTP (market data APIs, external data)
reqwest = { version = "0.12", features = ["json"] }

# Synthetic data generation (dev/test only)
rand = "0.8"
rand_distr = "0.4"

# IBKR adapter
ibapi = "2"

# Yahoo finance
yahoo_finance_api = "4"

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Futures
futures = "0.3"

# Configuration (typed)
config = { version = "0.14", default-features = false, features = ["toml"] }

# Testing
tokio-test = "0.4"
