[package]
name = "talon-db"
version.workspace = true
edition.workspace = true

[dependencies]
talon-types = { path = "../talon-types" }
rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
