[package]
name = "talon-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
